force-app/main/default/objects/EventMessage__c/EventMessage__c.object-meta.xml
<CustomObject>
    <description>イベントメッセージは、Experience Cloudから投稿された参加者の意気込みと参加者種別を保持します。AI生成のお礼メッセージと処理ステータスを保存し、Slack botやHosted MCP Server経由の集計、更新、リアルタイム表示に利用します。</description>
    <label>イベントメッセージ</label>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>イベントメッセージ番号</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>イベントメッセージ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>