force-app/main/default/objects/EventMessage__c/fields/AttendeeRole__c.field-meta.xml
<CustomField>
    <fullName>AttendeeRole__c</fullName>
    <description>イベント参加者が自身の立場を選択し、登壇者が種別ごとの投稿傾向を集計できるようにします。</description>
    <inlineHelpText>投稿者に最も近い参加者種別を選択してください。</inlineHelpText>
    <label>参加者種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一般</fullName>
            </value>
            <value>
                <fullName>登壇者</fullName>
            </value>
            <value>
                <fullName>運営</fullName>
            </value>
            <value>
                <fullName>管理者</fullName>
            </value>
            <value>
                <fullName>ユーザー</fullName>
            </value>
            <value>
                <fullName>開発者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>