force-app/main/default/objects/EventMessage__c/fields/Enthusiasm__c.field-meta.xml
<CustomField>
    <fullName>Enthusiasm__c</fullName>
    <description>Experience Cloudから投稿された、イベント参加に向けた意気込み本文を保存します。</description>
    <inlineHelpText>イベントへの期待、試したいこと、登壇者へのメッセージなどを入力してください。</inlineHelpText>
    <label>意気込み</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>