force-app/main/default/objects/EventMessage__c/fields/ReplyMessage__c.field-meta.xml
<CustomField>
    <fullName>ReplyMessage__c</fullName>
    <description>Prompt Builderを呼び出す非同期Apexが生成した、参加者向けのお礼メッセージを保存します。</description>
    <inlineHelpText>AIが生成した参加者への返信文が保存されます。</inlineHelpText>
    <label>お礼メッセージ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>