force-app/main/default/objects/EventMessage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>投稿後のAI返信生成プロセスが受付済か処理完了かを示し、Experience Cloud側の表示制御に使います。</description>
    <inlineHelpText>投稿は受付済で作成され、返信生成後に処理完了へ更新されます。</inlineHelpText>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受付済</fullName>
                <default>true</default>
                <label>受付済</label>
            </value>
            <value>
                <fullName>処理完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>