force-app/main/default/objects/EventMessage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AttendeeRole__c</columns>
    <columns>Status__c</columns>
    <columns>Enthusiasm__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>